# TatSu

./: .gitignore  pyproject.toml  setup.cfg
tatsu/: _config.py
